Fixed breaking too long labels into lines
Relates to #11711

--- a/gui/admin-gui/src/frontend/scss/_midpoint.scss
+++ b/gui/admin-gui/src/frontend/scss/_midpoint.scss
@@ -2495,3 +2495,8 @@ footer.app-footer a {
       }
     }
 }
+
+.prism-property-value-label {
+  white-space: pre-wrap;
+  overflow-wrap: anywhere;
+}
